--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
                 <p class="mt-3">Our manual testing course has been structured in a way to let you acquire the rudiments of software testing and also prepare you to become a rock-start Software Quality Assurance Tester.Our manual testing course has been structured in a way to let you acquire the rudiments of software testing and also prepare you to become a rock-start Software Quality Assurance Tester.Our manual testing course has been structured in a way to let you acquire the rudiments of software testing and also prepare you to become a rock-start Software Quality Assurance Tester.</p>
             </div>
             <div class="button-box">
-                <button type="button" class="btn btn-primary">Enroll info</button>
+                <button type="button" class="btn btn-lg btn-primary">Enroll info</button>
             </div>
         </div>
         
     </div>
 </div>
 <div class="container text-white" style="background-color: hsl(291.43deg 77.78% 3.53%);">
-    <div class="row">
+    <div class="row ">
         
 
         <div class="col-md-6 pt-5" style="margin-top: 100px;">
